# jarves

./: .gitattributes  README.md
jarves/: CMakeLists.txt  package.xml
jarves/launch/: amcl_demo.launch  face_detector.rgbd.launch  jarves_gazebo.launch  jarves_teleop.launch  leg_detector.launch
jarves/srv/: Destination.srv
jarves_description/: CMakeLists.txt  package.xml
jarves_description/robots/: kobuki_human_asus_xtion_pro.urdf.xacro  kobuki_stackless_asus_xtion_pro.urdf.xacro
jarves_description/robots/includes/: person_standing.xacro
jarves_description/urdf/humans/: person_standing.xacro
jarves_description/urdf/sensors/: asus_xtion_pro_invisible.urdf.xacro  hokuyo.urdf.xacro
jarves_gazebo/: CMakeLists.txt  package.xml
jarves_gazebo/cfg/: custom_rosconsole.conf
jarves_gazebo/launch/: jarves_gazebo.launch  jarves_gazebo_duo.launch
jarves_gazebo/launch/includes/: kobuki.launch.xml  kobuki_gmapping.launch.xml
jarves_gazebo/maps/: irim_2_map.pgm  irim_2_map.yaml
jarves_gazebo/scripts/: simple_follow.py
jarves_gazebo/worlds/: .gitattributes  irim.world  people.world  person.world
jarves_gazebo/worlds/maps/: .gitattributes  gazebo-willowgarage-locations.yaml  gazebo-willowgarage.pgm  willow_full.pgm  willow_full.yaml  willow_halls.pgm  willow_halls.yaml  willow_outside.pgm  willow_outside.yaml
jarves_gazebo/worlds/models/irim/: model.config  model.sdf
jarves_gazebo/worlds/models/irim/meshes/: irim.dae
jarves_interface/: README.md
jarves_interface/app/Config/: database.php
jarves_interface/app/Controller/: JarvesInterfaceController.php
jarves_interface/app/View/JarvesInterface/: view.ctp
jarves_interface/app/tmp/: .gitignore
jarves_interface/app/tmp/cache/models/: rms_cake_model_default_rms_appointments  rms_cake_model_default_rms_articles  rms_cake_model_default_rms_colladas  rms_cake_model_default_rms_conditions  rms_cake_model_default_rms_environments  rms_cake_model_default_rms_ifaces  rms_cake_model_default_rms_ifaces_environments  rms_cake_model_default_rms_ims  rms_cake_model_default_rms_list  rms_cake_model_default_rms_logs  rms_cake_model_default_rms_markers  rms_cake_model_default_rms_mjpegs  rms_cake_model_default_rms_pages  rms_cake_model_default_rms_protocols  rms_cake_model_default_rms_resources  rms_cake_model_default_rms_roles  rms_cake_model_default_rms_rosbridges  rms_cake_model_default_rms_settings  rms_cake_model_default_rms_slots  rms_cake_model_default_rms_streams  rms_cake_model_default_rms_studies  rms_cake_model_default_rms_subscriptions  rms_cake_model_default_rms_teleops  rms_cake_model_default_rms_tfs  rms_cake_model_default_rms_urdfs  rms_cake_model_default_rms_users
jarves_interface/app/tmp/cache/persistent/: rms_cake_core_cake_console_eng  rms_cake_core_cake_dev_en-us  rms_cake_core_cake_en-us  rms_cake_core_cake_eng  rms_cake_core_default_eng  rms_cake_core_file_map  rms_cake_core_method_cache
jarves_navigation/: CMakeLists.txt  package.xml
jarves_navigation/launch/: amcl_demo.launch
jarves_navigation/launch/includes/: amcl.launch.xml  gmapping.launch.xml  move_base.launch.xml  safety_controller.launch.xml  velocity_smoother.launch.xml
jarves_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml
jarves_navigation/src/: guide_follower.cpp
jarves_rviz/: CMakeLists.txt  package.xml
jarves_rviz/launch/: view_jarves.launch  view_navigation.launch  view_navigation_duo.launch
jarves_rviz/rviz/: jarves.rviz  navigation.rviz  navigation_duo.rviz
jarves_smach/: CMakeLists.txt  package.xml
jarves_smach/scripts/: simple_leader.py
jarves_smach/src/: destination_client.cpp  destination_server.cpp
jarves_teleop/: CMakeLists.txt  package.xml
jarves_teleop/launch/: jarves_teleop.launch
jarves_teleop/launch/includes/: velocity_smoother.launch.xml
uashh_smach/: CMakeLists.txt  manifest.xml  package.xml
