<?xml version="1.0"?>
<package>
  <name>jarves_description</name>
  <version>0.0.0</version>
  <description>The jarves_description package</description>

  <maintainer email="zephirefaith@zephirefaith.github">Priyam Parashar</maintainer>
  <maintainer email="roxfoxpox@gmail.com">Ruffin White</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/CognitiveRobotics/jarves</url>
  <url type="repository">https://github.com/CognitiveRobotics/jarves</url>
  <url type="bugtracker">https://github.com/CognitiveRobotics/jarves/issues</url>

  <author email="zephirefaith@zephirefaith.github">Priyam Parashar</author>
  <author email="roxfoxpox@gmail.com">Ruffin White</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>kobuki_description</run_depend>
  <run_depend>create_description</run_depend>
</package>
