<?xml version="1.0"?>
<package>
  <name>jarves_gazebo</name>
  <version>0.0.0</version>
  <description>The jarves_gazebo package</description>

  <maintainer email="zephirefaith@zephirefaith.github">Priyam Parashar</maintainer>
  <maintainer email="roxfoxpox@gmail.com">Ruffin White</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/CognitiveRobotics/jarves</url>
  <url type="repository">https://github.com/CognitiveRobotics/jarves</url>
  <url type="bugtracker">https://github.com/CognitiveRobotics/jarves/issues</url>

  <author email="zephirefaith@zephirefaith.github">Priyam Parashar</author>
  <author email="roxfoxpox@gmail.com">Ruffin White</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros
      gazebo_plugin_path="${prefix}/lib"
      gazebo_model_path="${prefix}/../jarves_gazebo/worlds/models" />
  </export>
</package>
