<?xml version="1.0"?>
<package>
  <name>jarves_rviz</name>
  <version>0.0.0</version>
  <description>The jarves_rviz package</description>

  <maintainer email="zephirefaith@zephirefaith.github">Priyam Parashar</maintainer>
  <maintainer email="roxfoxpox@gmail.com">Ruffin White</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/CognitiveRobotics/jarves</url>
  <url type="repository">https://github.com/CognitiveRobotics/jarves</url>
  <url type="bugtracker">https://github.com/CognitiveRobotics/jarves/issues</url>

  <author email="zephirefaith@zephirefaith.github">Priyam Parashar</author>
  <author email="roxfoxpox@gmail.com">Ruffin White</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>turtlebot_teleop</run_depend>
</package>
